--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -1,6 +1,5 @@
-# Thanks https://github.com/MichaelCurrin/mdbook-quickstart
-
-name: GH Pages Deploy
+# Thanks https://github.com/actions/starter-workflows/blob/main/pages/mdbook.yml
+name: Deploy mdBook site to Pages
 
 on:
   push:
@@ -9,44 +8,55 @@ on:
   pull_request:
     branches:
       - main
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
+# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
 
 env:
-  MDBOOK_VERSION: v0.4.28
-
-permissions:
-  contents: write
+  MDBOOK_VERSION: 0.4.28
 
 jobs:
-  check-changes:
+  # Build job
+  build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: dorny/paths-filter@v2
-        id: filter
-        with:
-          filters: |
-            src:
-              - 'src/**'
-              - book.toml
-    outputs:
-      src: ${{ steps.filter.outputs.src }}
-
-  build-deploy:
-    runs-on: ubuntu-latest
-    needs: check-changes
-    if: ${{ needs.check-changes.outputs.src == 'true' }}
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Install dependencies
+      - name: Install mdBook
         run: |
           mkdir -p bin
-          curl -sSL https://github.com/rust-lang/mdBook/releases/download/${MDBOOK_VERSION}/mdbook-${MDBOOK_VERSION}-x86_64-unknown-linux-gnu.tar.gz | tar -xz --directory=bin
-      - name: Build
-        run: bin/mdbook build
-      - name: Deploy to GitHub Pages
+          curl -sSL https://github.com/rust-lang/mdBook/releases/download/v${MDBOOK_VERSION}/mdbook-v${MDBOOK_VERSION}-x86_64-unknown-linux-gnu.tar.gz | tar -xz --directory=bin
+      - name: Setup Pages
         if: ${{ github.event_name != 'pull_request' }}
-        uses: peaceiris/actions-gh-pages@v3
+        id: pages
+        uses: actions/configure-pages@v3
+      - name: Build with mdBook
+        run: bin/mdbook build
+      - name: Upload artifact
+        if: ${{ github.event_name != 'pull_request' }}
+        uses: actions/upload-pages-artifact@v1
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: book
+          path: ./book
+
+  # Deployment job
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    if: ${{ github.event_name != 'pull_request' }}
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v2
